--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=pescadito
+# Puerto del Servidor
+server.port=8080
+
+# Configuración H2
+spring.datasource.url=jdbc:h2:mem:pescaditodb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sandy
+spring.datasource.password=sandy
+
+# Configuración JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
